tab overflow update for passport issue #1018

--- a/samples/bb10/www/bbui.css
+++ b/samples/bb10/www/bbui.css
@@ -14,7 +14,7 @@
 * limitations under the License.
 */
 
-/* bbUI for BB10 VERSION: 0.9.6.1783*/
+/* bbUI for BB10 VERSION: 0.9.6.1797*/
 
 body, html {
 	padding:0;
@@ -5196,6 +5196,40 @@ body, html {
 	.bb-action-bar-10dot3-overflow-button-landscape {
 		margin-top: 4px;
 		width: 144px;
+	}
+
+	/* Tab Overflow Menu */
+	.bb-tab-overflow-menu-item {
+		font-size:42pt;
+		padding-left: 10px;
+	}
+
+	.bb-tab-overflow-menu-item-single {		
+		height: 124px;
+		line-height: 116px;
+	}
+
+	.bb-tab-overflow-menu-item-double {		
+		height: 88px;
+		line-height: 66px;
+	}
+
+	.bb-tab-overflow-menu-item-inner {
+		padding-left: 15px;
+	}
+
+	.bb-tab-overflow-menu-item .tab-accent-text {
+		padding-left: 15px;
+		font-size: 32pt;
+		height: 56px;
+		margin-top: -20px;
+	}
+
+	.bb-tab-overflow-menu-item-image {
+		height: 100px;
+		width: 100px;
+		margin-top: 0px;
+		margin-left:10px;
 	}
 
 }
